<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_item_shoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                tools:src="@android:color/darker_gray" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorItemName"
                android:text="@string/shoes_name"
                android:textStyle="bold"
                android:textSize="23sp" />

            <Button
                android:id="@+id/btn_buy"
                android:background="@drawable/button_background"
                android:textColor="#ffffff"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:text="@string/buy" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:text="@string/price"
                android:textColor="@color/colorHarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_price"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="5dp"
                android:textSize="20sp"
                android:text="@string/value_harga"
                android:textColor="@color/colorHarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:text="@string/size"
                android:textColor="@color/colorHarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="5dp"
                android:textSize="16sp"
                android:text="@string/value_size"
                android:textColor="@color/colorHarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="20dp"
                android:textSize="16sp"
                android:text="@string/warna"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_warna"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="5dp"
                android:textSize="16sp"
                android:text="@string/value_warna"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:lineSpacingMultiplier="1"
            android:text="@string/shoes_detail"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:text="Text Detail"
            android:textSize="17sp"
            android:textStyle="normal"
            android:textColor="@android:color/black"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                android:text="@string/note"
                android:textStyle="italic"
                android:textColor="@color/colorHarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="5dp"
                android:textSize="15sp"
                android:textStyle="italic"
                android:text="@string/value_note"
                android:textColor="@color/colorHarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_share"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="#ffffff"
            android:background="@drawable/button_background"
            android:layout_width="match_parent"
            android:text="@string/share"
            android:textSize="18sp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>